--- a/production/about.html
+++ b/production/about.html
@@ -124,7 +124,7 @@
             <div class="g-container--md g-text-center--xs g-ver-center--md g-padding-y-150--xs g-padding-y-0--md">
                 <div class="g-margin-b-30--xs">
                             <h1 class="g-font-size-35--xs g-font-size-45--sm g-font-size-55--md g-color--white">
-								IT EXPO<br>Pendidikan Teknik Informatika</br>Universitas Negeri Jakarta
+								IT EXPO<br>Pendidikan Informatika</br>Universitas Negeri Jakarta
 							</h1>
                         </div>
             </div>
@@ -150,7 +150,7 @@
                 </div>
                 <div class="col-sm-1"></div>
                 <div class="col-sm-5 g-hor-centered-row__col">
-                    <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-25--xs">BEM Prodi Pendidikan Teknik Informatika</p>
+                    <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-25--xs">BEM Prodi Pendidikan Informatika</p>
                     <h2 class="g-font-size-32--xs g-font-size-36--sm g-margin-b-25--xs">Nama-Perwakilan</h2>
                     <p class="g-font-size-18--sm">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </div>
@@ -169,7 +169,7 @@
                 </div>
                 <div class="col-sm-1"></div>
                 <div class="col-sm-5 col-sm-pull-7 g-hor-centered-row__col g-text-left--xs g-text-right--md">
-                    <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-25--xs">Prodi Pendidikan Teknik Informatika</p>
+                    <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-25--xs">Prodi Pendidikan Informatika</p>
                     <h2 class="g-font-size-32--xs g-font-size-36--sm g-margin-b-25--xs">Dosen-Perwakilan Prodi</h2>
                     <p class="g-font-size-18--sm">Working together on the daily requires each individual to let the greater good of the team’s work surface above their own ego.</p>
                 </div>
@@ -198,12 +198,11 @@
         <!-- End About -->
 
 		<!-- Portfolio Gallery -->
-        <div class="container g-padding-y-80--xs g-padding-y-125--sm">
+        <!-- <div class="container g-padding-y-80--xs g-padding-y-125--sm">
 			<div class="g-text-center--xs g-margin-b-100--xs">
                 <h3 class="text-uppercase g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-25--xs">Galeri</h3>
             </div>
             <div id="js__grid-portfolio-gallery" class="cbp">
-                <!-- Item -->
                 <div class="s-portfolio__item cbp-item logos motion">
                     <div class="s-portfolio__img-effect">
                         <img src="img/400x500/01.jpg" alt="Portfolio Image">
@@ -227,7 +226,6 @@
                         </ul>
                     </div>
                 </div>
-                <!-- Item -->
                 <div class="s-portfolio__item cbp-item graphic">
                     <div class="s-portfolio__img-effect">
                         <img src="img/970x647/06.jpg" alt="Portfolio Image">
@@ -251,7 +249,6 @@
                         </ul>
                     </div>
                 </div>
-                <!-- Item -->
                 <div class="s-portfolio__item cbp-item logos">
                     <div class="s-portfolio__img-effect">
                         <img src="img/400x500/02.jpg" alt="Portfolio Image">
@@ -275,7 +272,6 @@
                         </ul>
                     </div>
                 </div>
-                <!-- Item -->
                 <div class="s-portfolio__item cbp-item motion graphic">
                     <div class="s-portfolio__img-effect">
                         <img src="img/400x550/01.jpg" alt="Portfolio Image">
@@ -299,7 +295,6 @@
                         </ul>
                     </div>
                 </div>
-                <!-- Item -->
                 <div class="s-portfolio__item cbp-item logos graphic">
                     <div class="s-portfolio__img-effect">
                         <img src="img/970x647/09.jpg" alt="Portfolio Image">
@@ -323,7 +318,6 @@
                         </ul>
                     </div>
                 </div>
-                <!-- Item -->
                 <div class="s-portfolio__item cbp-item motion graphic">
                     <div class="s-portfolio__img-effect">
                         <img src="img/970x647/04.jpg" alt="Portfolio Image">
@@ -347,7 +341,6 @@
                         </ul>
                     </div>
                 </div>
-                <!-- Item -->
                 <div class="s-portfolio__item cbp-item logos">
                     <div class="s-portfolio__img-effect">
                         <img src="img/400x500/03.jpg" alt="Portfolio Image">
@@ -371,7 +364,6 @@
                         </ul>
                     </div>
                 </div>
-                <!-- Item -->
                 <div class="s-portfolio__item cbp-item motion graphic">
                     <div class="s-portfolio__img-effect">
                         <img src="img/400x500/04.jpg" alt="Portfolio Image">
@@ -395,7 +387,6 @@
                         </ul>
                     </div>
                 </div>
-                <!-- Item -->
                 <div class="s-portfolio__item cbp-item motion graphic">
                     <div class="s-portfolio__img-effect">
                         <img src="img/970x647/07.jpg" alt="Portfolio Image">
@@ -419,7 +410,6 @@
                         </ul>
                     </div>
                 </div>
-                <!-- Item -->
                 <div class="s-portfolio__item cbp-item motion graphic">
                     <div class="s-portfolio__img-effect">
                         <img src="img/970x647/05.jpg" alt="Portfolio Image">
@@ -443,16 +433,13 @@
                         </ul>
                     </div>
                 </div>
-                <!-- End Item -->
             </div>
-            <!-- End Portfolio Gallery -->
-        </div>
+        </div> -->
         <!-- End Portfolio -->
 
         <!-- Clients -->
-        <div class="g-padding-y-80--xs g-padding-y-125--sm">
+        <!-- <div class="g-padding-y-80--xs g-padding-y-125--sm">
             <div class="g-container--md">
-                <!-- Swiper Clients -->
                 <div class="s-swiper js__swiper-clients">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
@@ -482,9 +469,8 @@
                         </div>
                     </div>
                 </div>
-                <!-- End Swiper Clients -->
             </div>
-        </div>
+        </div> -->
         <!-- End Clients -->
 		
 		
