--- a/production/contacts.html
+++ b/production/contacts.html
@@ -127,21 +127,21 @@
                         <div class="g-text-center--xs">
                             <i class="g-display-block--xs g-font-size-40--xs g-color--white-opacity g-margin-b-30--xs ti-email"></i>
                             <h4 class="g-font-size-18--xs g-color--white g-margin-b-5--xs">Email</h4>
-                            <p class="g-color--white-opacity">ptikunj@unj.ac.id</p>
+                            <p class="g-font-size-16--xs g-color--white g-margin-b-5--xs">it.fest.unj@gmail.com</p>
                         </div>
                     </div>
                     <div class="col-xs-4 g-full-width--xs g-margin-b-50--xs g-margin-b-0--sm">
                         <div class="g-text-center--xs">
                             <i class="g-display-block--xs g-font-size-40--xs g-color--white-opacity g-margin-b-30--xs ti-map-alt"></i>
                             <h4 class="g-font-size-18--xs g-color--white g-margin-b-5--xs">Alamat</h4>
-                            <p class="g-color--white-opacity">UNJ Pemuda</p>
+                            <p class="g-font-size-16--xs g-color--white g-margin-b-5--xs">Jl. Rawamangun Muka, RT.11/RW.14, Rawamangun, RT.11/RW.14, Rawamangun, Pulo Gadung, Kota Jakarta Timur, <br/>Daerah Khusus Ibukota Jakarta 13220</p>
                         </div>
                     </div>
                     <div class="col-xs-4 g-full-width--xs">
                         <div class="g-text-center--xs">
                             <i class="g-display-block--xs g-font-size-40--xs g-color--white-opacity g-margin-b-30--xs ti-headphone-alt"></i>
                             <h4 class="g-font-size-18--xs g-color--white g-margin-b-5--xs">Hubungi</h4>
-                            <p class="g-color--white-opacity">+628218725xxxx</p>
+                            <p class="g-font-size-16--xs g-color--white g-margin-b-5--xs">+628218725xxxx</p>
                         </div>
                     </div>
                 </div>
