--- a/production/index.html
+++ b/production/index.html
@@ -123,7 +123,7 @@
                     <div class="container g-text-center--xs g-ver-center--xs">
                         <div class="g-margin-b-30--xs">
                             <h1 class="g-font-size-35--xs g-font-size-45--sm g-font-size-55--md g-color--white">
-								IT EXPO<br>Pendidikan Teknik Informatika</br>Universitas Negeri Jakarta
+								IT EXPO<br>Pendidikan Informatika</br>Universitas Negeri Jakarta
 							</h1>
                         </div>
                         <!--<a class="js__popup__youtube" href="https://www.youtube.com/watch?v=lcFYdgZKZxY" title="Intro Video">
@@ -174,7 +174,7 @@
                         </div>
                         <div class="g-media__body g-padding-x-20--xs">
                             <h3 class="g-font-size-18--xs">Tanggal</h3>
-                            <p class="g-margin-b-0--xs">29 November 2018</p>
+                            <p class="g-margin-b-0--xs">19 September -<br/>29 November 2018</p>
                         </div>
                     </div>
                 </div>
@@ -289,8 +289,8 @@
                         </div>
                     </div>
                     <div class="col-md-4 col-md-offset-1">
-                        <p class="g-font-size-18--xs">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        <p class="g-font-size-18--xs">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p class="g-font-size-18--xs">Sejak tahun 2016, IT Fest mulai diadakan secara berkala tiap tahun oleh BEMP Pendidikan Informatika. IT Fest terinspirasi dari kegiatan HMJ (Himpunan Mahasiswa Jurusan) Elektro yang bernama emofest yang kini telah dipecah menjadi 3 organisasi (BEMPVT Elektro, BEMP Elektronika, BEMP PTIK).</p>
+                        <p class="g-font-size-18--xs">Sebelumnya, IT Fest memiliki 2 rangkaian acara yaitu Seminar dan Lomba Akademik. Namun, sejak tahun 2018, IT Fest resmi berganti menjadi IT Expo. Pada IT Expo UNJ 2018 memiliki 4 rangkaian acara yaitu Seminar, Expo, Lomba, dan Workshop.</p>
 						<a href="about.html" class="g-font-size-18--xs">Selengkapnya..</a>
                     </div>
                 </div>
@@ -332,7 +332,7 @@
                                 </div>
                                 <div class="g-padding-x-20--xs">
                                     <h3 class="g-font-size-18--xs g-color--white">Pendaftaran</h3>
-                                    <p class="g-color--white-opacity">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                    <p class="g-font-size-18--xs g-color--white">19 September -<br/>26 Oktober 2018</p>
                                 </div>
                             </div>
                         </li>
@@ -346,7 +346,7 @@
                                 </div>
                                 <div class="g-padding-x-20--xs">
                                     <h3 class="g-font-size-18--xs g-color--white">Kompetisi</h3>
-                                    <p class="g-color--white-opacity">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                    <p class="g-font-size-18--xs g-color--white">27 Oktober -<br/>29 November 2018</p>
                                 </div>
                             </div>
                         </li>
@@ -360,7 +360,7 @@
                                 </div>
                                 <div class="g-padding-x-20--xs">
                                     <h3 class="g-font-size-18--xs g-color--white">Workshop</h3>
-                                    <p class="g-color--white-opacity">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                    <p class="g-font-size-18--xs g-color--white">29 November 2018</p>
                                 </div>
                             </div>
                         </li>
@@ -374,7 +374,7 @@
                                 </div>
                                 <div class="g-padding-x-20--xs">
                                     <h3 class="g-font-size-18--xs g-color--white">EXPO</h3>
-                                    <p class="g-color--white-opacity">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                    <p class="g-font-size-18--xs g-color--white">29 November 2018</p>
                                 </div>
                             </div>
                         </li>
@@ -386,7 +386,7 @@
 		
         <!--========== PAGE CONTENT ==========-->
         <!-- About -->
-        <div class="container g-padding-y-80--xs g-padding-y-125--sm">
+        <!-- <div class="container g-padding-y-80--xs g-padding-y-125--sm">
 			
 			<div class="g-text-center--xs g-margin-b-100--xs">
                 <h3 class="text-uppercase g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-25--xs">Pembicara</h3>
@@ -427,13 +427,28 @@
                     <p class="g-font-size-18--sm">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- End About -->
 
+        <!-- Subscribe -->
+        <div class="js__parallax-window" style="background: url(img/1920x1080/01.jpg) 50% 0 no-repeat fixed;">
+            <div class="g-container--sm g-text-center--xs g-padding-y-80--xs g-padding-y-125--sm">
+                <div class="g-margin-b-80--xs">
+                    <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--white-opacity g-letter-spacing--2 g-margin-b-25--xs">Ayo Daftar!</p>
+                    <h2 class="g-font-size-32--xs g-font-size-36--md g-color--white">Ikuti Berbagai Kegiatan Menarik dan Bermanfaat dari Kami</h2>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1">
+                        <a href="login.html#registrasi" class="text-uppercase s-btn s-btn--md s-btn--white-brd g-radius--50">Daftar Sekarang!</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End Subscribe -->
+
         <!-- Clients -->
-        <div class="g-bg-color--sky-light">
+        <!-- <div class="g-bg-color--sky-light">
             <div class="g-container--md g-padding-y-80--xs g-padding-y-125--sm">
-                <!-- Swiper Clients -->
                 <div class="s-swiper js__swiper-clients">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
@@ -463,9 +478,8 @@
                         </div>
                     </div>
                 </div>
-                <!-- End Swiper Clients -->
             </div>
-        </div>
+        </div> -->
         <!-- End Clients -->
 		
 
