--- a/production/index_events.html
+++ b/production/index_events.html
@@ -135,7 +135,7 @@
                         <div class="row">
                             <div class="col-sm-6 g-margin-b-30--xs g-margin-b-0--md">
                                 <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".4s">
-                                    <p class="g-font-size-18--xs g-color--white-opacity">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                    <p class="g-font-size-18--xs g-color--white-opacity">Revolusi IT untuk Pendidikan <br>di Era Revolusi Industri 4.0</p>
                                 </div>
                             </div>
                             <div class="col-sm-5 col-sm-offset-1">
@@ -401,7 +401,7 @@
                                 <div class="g-bg-color--primary g-padding-x-15--xs g-padding-y-10--xs g-margin-b-20--xs">
                                     <h4 class="g-font-size-22--xs g-font-size-26--sm g-color--white g-margin-b-0--xs">BEM Prodi</h4>
                                 </div>
-                                <p class="g-font-weight--700">Pendidikan Teknik Informatika</p>
+                                <p class="g-font-weight--700">Pendidikan Informatika</p>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                             </div>
                         </div>
@@ -441,7 +441,7 @@
         <!-- End Speakers -->
 
         <!-- Clients -->
-        <div class="g-padding-y-80--xs g-padding-y-125--sm">
+        <!-- <div class="g-padding-y-80--xs g-padding-y-125--sm">
             <div class="g-container--sm">
                 <div class="g-text-center--xs g-margin-b-80--xs">
                     <h2 class="g-font-size-32--xs g-font-size-36--sm">Sponsor</h2>
@@ -449,7 +449,6 @@
                 </div>
             </div>
             <div class="g-container--md">
-                <!-- Swiper Clients -->
                 <div class="s-swiper js__swiper-clients">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
@@ -479,9 +478,8 @@
                         </div>
                     </div>
                 </div>
-                <!-- End Swiper Clients -->
             </div>
-        </div>
+        </div> -->
         <!-- End Clients -->
 
         <!-- Google Map -->
