--- a/production/index_events.html
+++ b/production/index_events.html
@@ -137,7 +137,8 @@
                     <div class="row">
                         <div class="col-sm-6 g-margin-b-30--xs g-margin-b-0--md">
                             <div class="wow fadeInLeft" data-wow-duration=".3" data-wow-delay=".4s">
-                                <p class="g-font-size-18--xs g-color--white-opacity">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                <p class="g-font-size-18--xs g-color--white-opacity">Acara puncak dari serangkaian kegiatan yang dimulai dari lomba-lomba serta workshop-workshop yang membahas seputar IT. Expo yang akan berlangsung selama 1 hari ini akan di isi oleh beberapa pameran produk dari Mahasiswa
+                                    Informatika UNJ dan produk-produk dari beberapa perusahaan IT.</p>
                             </div>
                         </div>
                         <div class="col-sm-5 col-sm-offset-1">
@@ -177,9 +178,9 @@
                     <div class="g-margin-b-40--xs">
                         <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-25--xs">Deskripsi</p>
                         <h2 class="g-font-size-32--xs g-font-size-36--sm g-margin-b-30--xs">IT-EXPO</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p>Rangkaian beberapa kegiatan yang terdiri dari lomba, workshop, seminar dan expo. Lomba dalam rangkaian ini terdapat lomba akademik dan lomba umum. Workshop dalam rangkaian ini terdapat dua yaitu workshop guru tik dan workshop ui/ux.
+                            expo yang akan menyajikan pameran terhadap karya/produk IT yang diciptakan oleh mahasiswa Pendidikan Informatika UNJ serta dari beberapa perusahan yang bergerak dibidang IT, dan juga ditambah dengan seminar yang akan membahas
+                            mengenai informasi IT terkini diikuti dengan tema yang akan diangkat.</p>
                     </div>
                 </div>
 
@@ -262,7 +263,7 @@
                 <div class="col-sm-5 g-hor-centered-row__col">
                     <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-25--xs">Kompetisi</p>
                     <h2 class="g-font-size-32--xs g-font-size-36--sm g-margin-b-25--xs">Ajang Kompetisi dan Perlombaan IT-EXPO</h2>
-                    <p class="g-font-size-18--sm">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p class="g-font-size-18--sm">Ayo tantang dirimu dan ikuti kompetisi di IT-Expo!</p>
                 </div>
                 <div class="col-sm-1"></div>
                 <div class="col-sm-5 g-hor-centered-row__col">
@@ -272,9 +273,9 @@
 
             <div class="row g-hor-centered-row--md g-row-col--5 g-margin-b-80--xs g-margin-b-100--md">
                 <div class="col-sm-5 col-sm-push-7 g-hor-centered-row__col">
-                    <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-25--xs">Workshop</p>
+                    <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-25--xs">Seminar dan Workshop</p>
                     <h2 class="g-font-size-32--xs g-font-size-36--sm g-margin-b-25--xs">Ajang Edukasi dan Berbagi IT-EXPO</h2>
-                    <p class="g-font-size-18--sm">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p class="g-font-size-18--sm">Perluas pengetahuan dan keterampilan anda.</p>
                 </div>
                 <div class="col-sm-1"></div>
                 <div class="col-sm-5 col-sm-pull-7 g-hor-centered-row__col g-text-left--xs g-text-right--md">
@@ -286,7 +287,7 @@
                 <div class="col-sm-5 g-hor-centered-row__col">
                     <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-25--xs">Seminar dan EXPO</p>
                     <h2 class="g-font-size-32--xs g-font-size-36--sm g-margin-b-25--xs">Ajang Pameran dan Puncak IT-EXPO</h2>
-                    <p class="g-font-size-18--sm">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p class="g-font-size-18--sm">Lihat apa yang baru di dunia teknologi.</p>
                 </div>
                 <div class="col-sm-1"></div>
                 <div class="col-sm-5 g-hor-centered-row__col">
@@ -390,69 +391,17 @@
     <!-- End Features -->
 
 
-    <!-- Speakers -->
-    <div class="g-hor-divider__dashed--sky-light">
-        <div class="container g-padding-y-80--xs g-padding-y-125--sm">
-            <div class="g-text-center--xs g-margin-b-80--xs">
-                <h3 class="text-uppercase g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-25--xs">Pelaksana IT-EXPO</h3>
-            </div>
-            <div class="row g-overflow--hidden">
-                <div class="col-xs-4 g-full-width--xs g-margin-b-30--xs g-margin-b-0--lg">
-                    <!-- Speaker -->
-                    <div class="center-block g-box-shadow__dark-lightest-v1 g-width-100-percent--xs g-width-400--lg">
-                        <img class="img-responsive g-width-100-percent--xs" src="img/400x400/02.jpg" alt="Image">
-                        <div class="g-position--overlay g-padding-x-30--xs g-padding-y-30--xs g-margin-t-o-60--xs">
-                            <div class="g-bg-color--primary g-padding-x-15--xs g-padding-y-10--xs g-margin-b-20--xs">
-                                <h4 class="g-font-size-22--xs g-font-size-26--sm g-color--white g-margin-b-0--xs">BEM Prodi</h4>
-                            </div>
-                            <p class="g-font-weight--700">Pendidikan Teknik Informatika</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        </div>
-                    </div>
-                    <!-- End Speaker -->
-                </div>
-                <div class="col-xs-4 g-full-width--xs">
-                    <!-- Speaker -->
-                    <div class="center-block g-box-shadow__dark-lightest-v1 g-width-100-percent--xs g-width-400--lg">
-                        <img class="img-responsive g-width-100-percent--xs" src="img/400x400/01.jpg" alt="Image">
-                        <div class="g-position--overlay g-padding-x-30--xs g-padding-y-30--xs g-margin-t-o-60--xs">
-                            <div class="g-bg-color--primary g-padding-x-15--xs g-padding-y-10--xs g-margin-b-20--xs">
-                                <h4 class="g-font-size-22--xs g-font-size-26--sm g-color--white g-margin-b-0--xs">Universitas</h4>
-                            </div>
-                            <p class="g-font-weight--700">Universitas Negeri Jakarta</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        </div>
-                    </div>
-                    <!-- End Speaker -->
-                </div>
-                <div class="col-xs-4 g-full-width--xs">
-                    <!-- Speaker -->
-                    <div class="center-block g-box-shadow__dark-lightest-v1 g-width-100-percent--xs g-width-400--lg">
-                        <img class="img-responsive g-width-100-percent--xs" src="img/400x400/01.jpg" alt="Image">
-                        <div class="g-position--overlay g-padding-x-30--xs g-padding-y-30--xs g-margin-t-o-60--xs">
-                            <div class="g-bg-color--primary g-padding-x-15--xs g-padding-y-10--xs g-margin-b-20--xs">
-                                <h4 class="g-font-size-22--xs g-font-size-26--sm g-color--white g-margin-b-0--xs">UPT</h4>
-                            </div>
-                            <p class="g-font-weight--700">UPT TIK</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        </div>
-                    </div>
-                    <!-- End Speaker -->
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- End Speakers -->
+
 
     <!-- Clients -->
     <div class="g-padding-y-80--xs g-padding-y-125--sm">
         <div class="g-container--sm">
             <div class="g-text-center--xs g-margin-b-80--xs">
                 <h2 class="g-font-size-32--xs g-font-size-36--sm">Sponsor</h2>
-                <p class="g-font-size-18--md">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p class="g-font-size-18--md">sponsorship.itexpo@gmail.com</p>
             </div>
         </div>
-        <div class="g-container--md">
+        <div class="g-container--md hide">
             <!-- Swiper Clients -->
             <div class="s-swiper js__swiper-clients">
                 <div class="swiper-wrapper">
