--- a/production/login.html
+++ b/production/login.html
@@ -219,38 +219,46 @@
     <!-- End Mockup -->
 
     <!-- Clients -->
-    <div class="g-container--md g-padding-y-80--xs g-padding-y-100--sm">
-        <!-- Swiper Clients -->
-        <div class="s-swiper js__swiper-clients">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                    <div class="wow fadeIn" data-wow-duration=".3" data-wow-delay=".1s">
-                        <img class="s-clients-v1" src="img/clients/01-dark.png" alt="Clients Logo">
+    <div class="g-padding-y-80--xs g-padding-y-125--sm">
+        <div class="g-container--sm">
+            <div class="g-text-center--xs g-margin-b-80--xs">
+                <h2 class="g-font-size-32--xs g-font-size-36--sm">Sponsor</h2>
+                <p class="g-font-size-18--md">sponsorship.itexpo@gmail.com</p>
+            </div>
+        </div>
+        <div class="g-container--md hide">
+            <!-- Swiper Clients -->
+            <div class="s-swiper js__swiper-clients">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="wow fadeIn" data-wow-duration=".3" data-wow-delay=".1s">
+                            <img class="s-clients-v1" src="img/clients/01-dark.png" alt="Clients Logo">
+                        </div>
                     </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="wow fadeIn" data-wow-duration=".3" data-wow-delay=".2s">
-                        <img class="s-clients-v1" src="img/clients/02-dark.png" alt="Clients Logo">
+                    <div class="swiper-slide">
+                        <div class="wow fadeIn" data-wow-duration=".3" data-wow-delay=".2s">
+                            <img class="s-clients-v1" src="img/clients/02-dark.png" alt="Clients Logo">
+                        </div>
                     </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="wow fadeIn" data-wow-duration=".3" data-wow-delay=".3s">
-                        <img class="s-clients-v1" src="img/clients/03-dark.png" alt="Clients Logo">
+                    <div class="swiper-slide">
+                        <div class="wow fadeIn" data-wow-duration=".3" data-wow-delay=".3s">
+                            <img class="s-clients-v1" src="img/clients/03-dark.png" alt="Clients Logo">
+                        </div>
                     </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="wow fadeIn" data-wow-duration=".3" data-wow-delay=".4s">
-                        <img class="s-clients-v1" src="img/clients/04-dark.png" alt="Clients Logo">
+                    <div class="swiper-slide">
+                        <div class="wow fadeIn" data-wow-duration=".3" data-wow-delay=".4s">
+                            <img class="s-clients-v1" src="img/clients/04-dark.png" alt="Clients Logo">
+                        </div>
                     </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="wow fadeIn" data-wow-duration=".3" data-wow-delay=".5s">
-                        <img class="s-clients-v1" src="img/clients/05-dark.png" alt="Clients Logo">
+                    <div class="swiper-slide">
+                        <div class="wow fadeIn" data-wow-duration=".3" data-wow-delay=".5s">
+                            <img class="s-clients-v1" src="img/clients/05-dark.png" alt="Clients Logo">
+                        </div>
                     </div>
                 </div>
             </div>
+            <!-- End Swiper Clients -->
         </div>
-        <!-- End Swiper Clients -->
     </div>
     <!-- End Clients -->
 
