--- a/production/about.html
+++ b/production/about.html
@@ -133,9 +133,63 @@
     </div>
     <!--========== END PROMO BLOCK ==========-->
 
+    <!-- Speakers -->
+    <div class="g-hor-divider__dashed--sky-light">
+        <div class="container g-padding-y-80--xs g-padding-y-125--sm">
+            <div class="g-text-center--xs g-margin-b-80--xs">
+                <h3 class="text-uppercase g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-25--xs">Pelaksana IT-EXPO</h3>
+            </div>
+            <div class="row g-overflow--hidden">
+                <div class="col-xs-4 g-full-width--xs g-margin-b-30--xs g-margin-b-0--lg">
+                    <!-- Speaker -->
+                    <div class="center-block g-box-shadow__dark-lightest-v1 g-width-100-percent--xs g-width-400--lg">
+                        <img class="img-responsive g-width-100-percent--xs" src="img/400x400/02.jpg" alt="Image">
+                        <div class="g-position--overlay g-padding-x-30--xs g-padding-y-30--xs g-margin-t-o-60--xs">
+                            <div class="g-bg-color--primary g-padding-x-15--xs g-padding-y-10--xs g-margin-b-20--xs">
+                                <h4 class="g-font-size-22--xs g-font-size-26--sm g-color--white g-margin-b-0--xs">BEM Prodi</h4>
+                            </div>
+                            <p class="g-font-weight--700">Pendidikan Teknik Informatika</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
+                    </div>
+                    <!-- End Speaker -->
+                </div>
+                <div class="col-xs-4 g-full-width--xs">
+                    <!-- Speaker -->
+                    <div class="center-block g-box-shadow__dark-lightest-v1 g-width-100-percent--xs g-width-400--lg">
+                        <img class="img-responsive g-width-100-percent--xs" src="img/400x400/01.jpg" alt="Image">
+                        <div class="g-position--overlay g-padding-x-30--xs g-padding-y-30--xs g-margin-t-o-60--xs">
+                            <div class="g-bg-color--primary g-padding-x-15--xs g-padding-y-10--xs g-margin-b-20--xs">
+                                <h4 class="g-font-size-22--xs g-font-size-26--sm g-color--white g-margin-b-0--xs">Universitas</h4>
+                            </div>
+                            <p class="g-font-weight--700">Universitas Negeri Jakarta</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
+                    </div>
+                    <!-- End Speaker -->
+                </div>
+                <div class="col-xs-4 g-full-width--xs">
+                    <!-- Speaker -->
+                    <div class="center-block g-box-shadow__dark-lightest-v1 g-width-100-percent--xs g-width-400--lg">
+                        <img class="img-responsive g-width-100-percent--xs" src="img/400x400/01.jpg" alt="Image">
+                        <div class="g-position--overlay g-padding-x-30--xs g-padding-y-30--xs g-margin-t-o-60--xs">
+                            <div class="g-bg-color--primary g-padding-x-15--xs g-padding-y-10--xs g-margin-b-20--xs">
+                                <h4 class="g-font-size-22--xs g-font-size-26--sm g-color--white g-margin-b-0--xs">UPT</h4>
+                            </div>
+                            <p class="g-font-weight--700">UPT TIK</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
+                    </div>
+                    <!-- End Speaker -->
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Speakers -->
+
     <!--========== PAGE CONTENT ==========-->
     <!-- About -->
-    <div class="container g-padding-y-80--xs g-padding-y-125--sm">
+    <div class="container g-padding-y-80--xs g-padding-y-125--sm hide">
         <div class="g-text-center--xs g-margin-b-100--xs">
             <h3 class="text-uppercase g-font-weight--700 g-color--primary g-letter-spacing--2 g-margin-b-25--xs">Kata Mereka</h3>
         </div>
@@ -453,7 +507,13 @@
 
     <!-- Clients -->
     <div class="g-padding-y-80--xs g-padding-y-125--sm">
-        <div class="g-container--md">
+        <div class="g-container--sm">
+            <div class="g-text-center--xs g-margin-b-80--xs">
+                <h2 class="g-font-size-32--xs g-font-size-36--sm">Sponsor</h2>
+                <p class="g-font-size-18--md">sponsorship.itexpo@gmail.com</p>
+            </div>
+        </div>
+        <div class="g-container--md hide">
             <!-- Swiper Clients -->
             <div class="s-swiper js__swiper-clients">
                 <div class="swiper-wrapper">
