--- a/production/user-dash.html
+++ b/production/user-dash.html
@@ -464,6 +464,7 @@
             <div class="g-margin-b-80--xs">
                 <h2 class="g-font-size-40--xs g-font-size-50--sm g-font-size-60--md g-color--white">e-Sports - Mobile Legends</h2>
             </div>
+            <a class="text-uppercase s-btn s-btn--md s-btn--white-brd g-radius--50" data-toggle="modal" data-target="#modal-esport" id="r-ml">Registrasi</a>
         </div>
     </div>
     <!-- End Mockup -->
