--- a/production/user-dash.html
+++ b/production/user-dash.html
@@ -588,6 +588,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
+                    <span class="need-ktm-for-mahasiswa">Anda harus mengunggah KTM terlebih dahulu</span>
                     <button type="button" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs" data-dismiss="modal" data-toggle="modal" data-target="#modalRegWeb" id="reg-web">Registrasi</button>
                 </div>
             </div>
@@ -656,6 +657,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
+                        <span class="need-ktm-for-mahasiswa">Anda harus mengunggah KTM terlebih dahulu</span>
                     <button type="button" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs" data-dismiss="modal" data-toggle="modal" data-target="#modalRegJaringan" id="reg-jaringan">Registrasi</button>
                 </div>
             </div>
@@ -703,6 +705,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
+                    <span class="need-ktm-for-mahasiswa">Anda harus mengunggah KTM terlebih dahulu</span>
                     <button type="button" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs" data-dismiss="modal" data-toggle="modal" data-target="#modalRegMovie" id="reg-movie">Registrasi</button>
                 </div>
             </div>
@@ -764,6 +767,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
+                    <span class="need-ktm-for-mahasiswa">Anda harus mengunggah KTM terlebih dahulu</span>
                     <button type="button" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs" data-dismiss="modal" data-toggle="modal" data-target="#modalRegPoster" id="reg-poster">Registrasi</button>
                 </div>
             </div>
@@ -811,6 +815,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
+                    <span class="need-ktm-for-mahasiswa">Anda harus mengunggah KTM terlebih dahulu</span>
                     <button type="button" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs" data-dismiss="modal" data-toggle="modal" data-target="#modalRegEsport" id="reg-esport">Registrasi</button>
                 </div>
             </div>
@@ -876,6 +881,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
+                    <span class="need-ktm-for-mahasiswa">Anda harus mengunggah KTM terlebih dahulu</span>
                     <button type="button" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs" data-dismiss="modal" data-toggle="modal" data-target="#modalRegUiux" id="reg-uiux">Registrasi</button>
                 </div>
             </div>
@@ -924,6 +930,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
+                    <span class="need-ktm-for-mahasiswa">Anda harus mengunggah KTM terlebih dahulu</span>
                     <button type="button" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs" data-dismiss="modal" data-toggle="modal" data-target="#modalRegGuru" id="reg-guru">Registrasi</button>
                 </div>
             </div>
@@ -972,6 +979,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
+                    <span class="need-ktm-for-mahasiswa">Anda harus mengunggah KTM terlebih dahulu</span>
                     <button type="button" class="text-uppercase s-btn s-btn--sm s-btn--primary-bg g-radius--50 g-font-size-14--xs g-padding-x-20--xs" data-dismiss="modal" data-toggle="modal" data-target="#modalRegSeminar" id="reg-seminar">Registrasi</button>
                 </div>
             </div>
