Hide Pembicara Section

--- a/production/index.html
+++ b/production/index.html
@@ -167,7 +167,7 @@
                 <h2 class="g-font-size-32--xs g-font-size-36--md">We Give You Some Useful Experiences <br> That Would Drive You To Reach The Future.</h2>
             </div>
             <div class="row g-margin-b-60--xs g-margin-b-40--md">
-                <div class="col-sm-3 g-margin-b-60--xs g-margin-b-0--md">
+                <div class="col-sm-4 g-margin-b-60--xs g-margin-b-0--md">
                     <div class="clearfix">
                         <div class="g-media g-width-30--xs">
                             <div class="wow fadeInDown" data-wow-duration=".3" data-wow-delay=".1s">
@@ -180,7 +180,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-3 g-margin-b-60--xs g-margin-b-0--md">
+                <div class="col-sm-4 g-margin-b-60--xs g-margin-b-0--md">
                     <div class="clearfix">
                         <div class="g-media g-width-30--xs">
                             <div class="wow fadeInDown" data-wow-duration=".3" data-wow-delay=".2s">
@@ -193,7 +193,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-4">
                     <div class="clearfix">
                         <div class="g-media g-width-30--xs">
                             <div class="wow fadeInDown" data-wow-duration=".3" data-wow-delay=".3s">
@@ -218,7 +218,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-3">
+                <!-- <div class="col-sm-3">
                     <div class="clearfix">
                         <div class="g-media g-width-30--xs">
                             <div class="wow fadeInDown" data-wow-duration=".3" data-wow-delay=".3s">
@@ -230,7 +230,7 @@
                             <p class="g-margin-b-0--xs">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
             <!-- // end row  -->
         </div>
